--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
-title: Interferencias - Blog
-description: "Página web de Interferencias. #somosruido"
+title: Dogeclaw Mystics - Blog
+description: "Página web de Dogeclaw Mystics"
 tags:
 image:
   feature: banners/header.png
